MSS-2249 Fixed Icon Spacing

--- a/movado/cartridges/app_custom_movado/cartridge/client/default/scss/components/_addToCartModal.scss
+++ b/movado/cartridges/app_custom_movado/cartridge/client/default/scss/components/_addToCartModal.scss
@@ -397,7 +397,7 @@
                                 &::before {
                                     content: '';
                                     position: absolute;
-                                    left: 25%;
+                                    left: 20%;
                                     top: 50%;
                                     transform: translate(-50%, -50%);
                                     width: rem(15);
@@ -408,7 +408,7 @@
                                     background: url(../images/check_black.svg) center center no-repeat;
 
                                     @include media-breakpoint-down(md) {
-                                        left: 14%;
+                                        left: 6%;
                                     }
                                 }
 
